Splash 더미화면 추가

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,7 @@
 
     <color name="gray_333">#333333</color>
     <color name="gray_666">#666666</color>
+
+    <color name="color_71727A">#71727A</color>
+
 </resources>
