OnBoarding 화면 추가 및 최초실행 여부에 따라 화면 분기 처리

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,5 +22,6 @@
     <color name="gray_666">#666666</color>
 
     <color name="color_71727A">#71727A</color>
+    <color name="color_00C880">#00C880</color>
 
 </resources>
