로그인 화면 추가 및 앱 이름 변경

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,5 +23,6 @@
 
     <color name="color_71727A">#71727A</color>
     <color name="color_00C880">#00C880</color>
+    <color name="color_ADADAD">#ADADAD</color>
 
 </resources>
