관심분야 메인 화면 추가

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -43,13 +43,13 @@
             android:layout_marginHorizontal="24dp"
             android:layout_marginBottom="42dp"
             android:text="@string/sign_in_subtitle"
-            android:textColor="@color/color_ADADAD"
+            android:textColor="@color/color_adadad"
             android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@id/tv_sign_in_google"
+            app:layout_constraintBottom_toTopOf="@id/bt_next"
             app:layout_constraintStart_toStartOf="parent" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/tv_sign_in_google"
+            android:id="@+id/bt_next"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="24dp"
@@ -71,7 +71,7 @@
             android:layout_marginHorizontal="24dp"
             android:layout_marginBottom="10dp"
             android:text="@string/apply_policies_terms_message"
-            android:textColor="@color/color_71727A"
+            android:textColor="@color/color_71727a"
             android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@id/tv_privacy_policy"
             app:layout_constraintEnd_toEndOf="parent"
@@ -83,7 +83,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:text="@string/terms_of_service"
-            android:textColor="@color/color_00C880"
+            android:textColor="@color/color_00c880"
             android:textSize="12sp"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintBottom_toBottomOf="@id/tv_privacy_policy"
@@ -98,7 +98,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginBottom="10dp"
             android:text="@string/privacy_policy"
-            android:textColor="@color/color_00C880"
+            android:textColor="@color/color_00c880"
             android:textSize="12sp"
             app:layout_constraintBottom_toTopOf="@id/tv_copyright"
             app:layout_constraintEnd_toEndOf="parent"
@@ -111,7 +111,7 @@
             android:layout_marginHorizontal="24dp"
             android:layout_marginBottom="22dp"
             android:text="@string/mercy_copyright"
-            android:textColor="@color/color_71727A"
+            android:textColor="@color/color_71727a"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
