--- a/app/src/main/res/drawable/bg_e1e2e4_radius_12dp.xml
+++ b/app/src/main/res/drawable/bg_e1e2e4_radius_12dp.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/color_00c880" />
+    <solid android:color="@color/color_e1e2e4" />
 
     <corners android:radius="12dp" />
 
