--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,9 +21,11 @@
     <color name="gray_333">#333333</color>
     <color name="gray_666">#666666</color>
 
+    <color name="color_707991">#707991</color>
     <color name="color_71727a">#71727A</color>
     <color name="color_00c880">#00C880</color>
     <color name="color_adadad">#ADADAD</color>
     <color name="color_e1e2e4">#E1E2E4</color>
+    <color name="color_1f2024">#1F2024</color>
 
 </resources>
