--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,19 @@
         <item name="android:textColor">@color/gray_666</item>
     </style>
 
+    <style name="ButtonFullGreen">
+        <item name="android:background">@drawable/bg_00c880_radius_12dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="ButtonFullGray">
+        <item name="android:background">@drawable/bg_e1e2e4_radius_12dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
