9-07a0 설문조사 완료 페이지 추가

--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -24,7 +24,7 @@
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:text="@string/welcome_explain" />
+            tools:text="@string/welcome_need_information" />
 
         <androidx.appcompat.widget.AppCompatTextView
             style="@style/ButtonFullGreen"
